@startuml
entity user {
    * id: int <<pk>>
    *username: varchar(100)
    *password: varchar(100)
    *email: varchar(200)
    *phone: varchar(20)
    --
    refresh_token: varchar(255)
    profile_picture: varchar(300)
    create_at: timestamp
}

entity contact {
    *id: int <<pk>>
    *user_id: int <<fk>>
    --
    *first_name: varchar(100)
    last_name: varchar(100)
    *phone: int
    create_at: timestamp
}

entity contact_address {
    *id: int <<pk>>
    *contact_id: int
    --
    *street: varchar(100)
    *city: varchar(30)
    country: varchar(30)
    create_at: timestamp
}

entity user_address {
    *id: int <<pk>>
    *user_id <<pk>>
    --
    *street: varchar(100)
    *city: varchar(30)
    country: varchar(30)
    create_at: timestamp
}


contact }o--|| user : have
contact_address |o--|| contact : have
user_address |o--|| user : have

@enduml
